
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    email it to: develop@darkbot.info
    Support (only): http://forum.darkbot.info
    *******************************************************


Darkbot 7.0-RC7: Mar 13th, 2003
	
	- Removed the .runonce script from executing during the
	  "make" process. The funcionality this script produced
	  is depricated. Also removed this file from the distro.

	- Darkbot will now properly compile on Solaris. To make
	  this happen, you need to manually edit source/Makefile,
	  and remove a comment symbol before the word "LIBS".

	- Suppressed a warning message from main.h that happened
	  when compiling on Solaris. 

	- Makefile now works correctly on Solaris.

	- The MEM command is now limited to only users with admin
	  (level 3) access on the bot.

	- On startup, we now run_performs() BEFORE we join our home
	  channel. This fixes an issue that happened chiefly on 
	  Undernet, and allows the bot to authenticate and set 
	  umode +x, before it joins any channels.  I hope to fix 
	  this in a better way, but for now it's driving me nuts.

	- The startup screen now actually reflects what version this
	  is. Sorry, I forgot all about that startup screen, because
	  it's hard coded. hehe.

	- The Q~ variable in topic replies now works correctly. It
 	  was chopping all but the first word off, before.

	- Added MrSiMo to the list of contributors for his Arabic
	  translation.

	- The sleep command now accepts an arguement for the number
 	  of seconds you want the bot to sleep for.

	- DEFAULT_UMODE is now set immediately upon connection. 
 	  Several users said this was not being done, it was. It was
 	  just waiting >300 seconds, for whatever reason. Also, the
	  bot command PERFORMS now sets DEFAULT_UMODE in addition
  	  to running the the performs file.

	- New command line option.
	  -I now specifies the location of the directory containing